# qmricolors

./: .gitignore  README.md  pyproject.toml  test_vispy_simple.py
qmricolors/: __init__.py  lipari.csv  matplotlib_cmaps.py  navia.csv  vispy_cmaps.py
qmricolors/examples/: example.py  matplotlib_example.py  vispy_example.py
