[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qmricolors"
version = "0.1.1"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "vispy>=0.15.2",
    "numpy>=1.21.0",
]

[dependency-groups]
dev = [
    "pyqt5>=5.15.11",
]

[tool.hatch.build.targets.wheel]
packages = ["qmricolors"]

[tool.hatch.build.targets.wheel.force-include]
"qmricolors/lipari.csv" = "qmricolors/lipari.csv"
"qmricolors/navia.csv" = "qmricolors/navia.csv"
