[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qmricolors"
version = "0.1.2"
requires-python = ">=3.12"
description = "A Python package for easy access to the lipari and navia colormaps for quantitative MRI visualization."
readme = "README.md"
dependencies = [
    "matplotlib>=3.10.3",
    "vispy>=0.15.2",
    "numpy>=1.21.0",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[dependency-groups]
dev = [
    "pyqt5>=5.15.11",
]

[tool.hatch.build.targets.wheel]
packages = ["qmricolors"]

[tool.hatch.build.targets.wheel.force-include]
"qmricolors/lipari.csv" = "qmricolors/lipari.csv"
"qmricolors/navia.csv" = "qmricolors/navia.csv"
